# sentinel-utbm

./: .gitignore  LICENSE  README.md  config.yaml  environment.yml  landiras_gif.ipynb  modis+weather_yann.ipynb  proper.ipynb  pyproject.toml  requirements.txt  sentinel_request.ipynb
data/modis/: MOD14A1.A2021209.h10v03.061.2021218013045.hdf
data/modis/final/: MOD14A1.A2019361.h29v12.061.2020323172335.fire.cropped.resized.tif  MOD14A1.A2020001.h29v12.061.2020324074019.fire.cropped.resized.tif  MOD14A1.A2020009.h29v12.061.2020326053912.fire.cropped.resized.tif  MOD14A1.A2020017.h29v12.061.2020328103354.fire.cropped.resized.tif  MOD14A1.A2020025.h29v12.061.2020328140901.fire.cropped.resized.tif
notebooks/: merged.vrt  modis+weather_yann.ipynb  modis_request+weather_request+model.ipynb  modis_usage.ipynb  proper.ipynb  sentinel_usage.ipynb  struct_usage.ipynb
scripts/: data_structure.py  evalscripts.py  modis.py  sentinel.py  utils.py  weather.py
tiff_images/: image_0.tiff  image_1.tiff  image_10.tiff  image_11.tiff  image_12.tiff  image_13.tiff  image_14.tiff  image_15.tiff  image_16.tiff  image_17.tiff  image_18.tiff  image_19.tiff  image_2.tiff  image_20.tiff  image_21.tiff  image_22.tiff  image_23.tiff  image_24.tiff  image_25.tiff  image_26.tiff  image_27.tiff  image_28.tiff  image_29.tiff  image_3.tiff  image_30.tiff  image_31.tiff  image_32.tiff  image_33.tiff  image_34.tiff  image_35.tiff  image_36.tiff  image_37.tiff  image_38.tiff  image_39.tiff  image_4.tiff  image_40.tiff  image_41.tiff  image_5.tiff  image_6.tiff  image_7.tiff  (+2 more)
(+25 files in other folders)
