[tool.poetry]
name = "sentinel-utbm"
version = "0.1.0"
description = ""
authors = ["pcayetan <po.cayetanot@gmail.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
GDAL = "3.8.5"
pyModis = "^2.4.1"
xarray = "^2024.5.0"
shapely = "^2.0.4"
geopandas = "^0.14.4"
earthpy = "^0.9.4"
georaster = "^1.25"
cartopy = "^0.23.0"
basemap = "^1.4.1"
sentinelsat = "^1.2.1"
folium = "^0.16.0"
meteostat = "^1.6.7"
rioxarray = "^0.15.5"
opencv-python = "^4.9.0.80"
geopy = "^2.4.1"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
